--- a/mobile/templates/sign_history.html
+++ b/mobile/templates/sign_history.html
@@ -25,21 +25,26 @@
 .city li:last-child{border-right:none;}
 .city select{border:none;box-shadow:none;margin-top:0;height:33px;border-radius:0;width:100%;font-size:14px; background:url(images/down.gif) no-repeat right center;}
 .city option{font-size:14px;}
+.price{line-height:24px;}
 
 .history .item_list ul{margin:0;}
 .history .item_list .job_adress{padding-top:5px;}
 .history .item_list ul li{height:35px;line-height:35px;}
 .register_end{height:35px;line-height:35px;font-size:16px;width:96%;}
+.common_btn{width:80%;height:30px;line-height:30px;background-color:#ff7101;text-align:center;color:#fff;
+	letter-spacing:3px;padding-left:3px;text-align:center;font-size:16px;border-radius:5px;margin:12px auto;}
 </style>
 <body>
 <div class="main">
 	<div class="history" style="border-bottom:none;">
-		<div>
+		<!-- <a href="index.php?m=phone&a=add"><div class="common_btn">每日电话提报</div></a>
+		<hr /> -->
+		<div id="content_div">
 		<{foreach from=$list item=v}>
-			<div class="item_list" onclick="window.location.href='index.php?m=task&a=detail&id=<{$v.id}>'">
+			<div class="item_list" onclick="window.location.href='<{if $v.is_phone==1 && $v.is_qd==1}>index.php?m=phone&a=add&tid=<{else}>index.php?m=task&a=detail&id=<{/if}><{$v.id}>'">
 				<div class="list_title">
-					<div class="job_title"><{$v.title}><!-- <span class="special">特别推荐</span> --></div>
-					<div class="price"><{$v.money}>元 </div>
+					<div class="job_title"><{$v.title}></div>
+					<div class="price"><{if $v.is_phone==1 && $v.is_qd==1}>可提报电话<{/if}></div>
 					<div class="clear"></div>
 				</div>
 				<div class="job_adress"><{$v.addr}>
@@ -76,11 +81,11 @@ $(document).ready(function(){
 				}else{
 					var goodsStr='';
 					$.each(res,function(i,item){
-						goodsStr+='<div class="item_list"><div class="list_title" onclick=\'window.location.href="index.php?m=task&a=detail&id='+item.id+'"\'>';
-						goodsStr+='<div class="job_title">'+item.title+'</div>';
-						goodsStr+='<div class="price">'+item.money+'元 </div>';
-						goodsStr+='<div class="clear"></div></div>';
-						goodsStr+='<div class="job_adress">'+item.addr;
+						if(item.is_phone==1 && item.is_qd==1){
+							goodsStr+='<div class="item_list" onclick=\'window.location.href="index.php?m=phone&a=add&tid='+item.id+'"\'><div class="list_title"><div class="job_title">'+item.title+'</div><div class="price">可提报电话</div><div class="clear"></div></div><div class="job_adress">'+item.addr;
+						}else{
+							goodsStr+='<div class="item_list" onclick=\'window.location.href="index.php?m=task&a=detail&id='+item.id+'"\'><div class="list_title"><div class="job_title">'+item.title+'</div><div class="price">'+item.money+'元 </div><div class="clear"></div></div><div class="job_adress">'+item.addr;
+						}
 						if(item.is_valid==0){
 							goodsStr+='<div style="float:right;">审核中</div>';
 						}else if(item.is_valid==1){
@@ -88,10 +93,9 @@ $(document).ready(function(){
 						}else{
 							goodsStr+='<div style="float:right;">未通过</div>';
 						}
-						goodsStr+='<ul><li>'+item.nickname+'</li><li class="other_status" style="color:#999;">'+item.start_time+'</li></ul>';
-						goodsStr+='<div class="clear"></div></div>';
+						goodsStr+='</div><ul><li>'+item.nickname+'</li><li class="other_status" style="color:#999;">'+item.start_time+'</li></ul><div class="clear"></div></div>';
 					})
-					$('.history').append(goodsStr);
+					$('#content_div').append(goodsStr);
 				}
 			}
 		},'json');
