--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -117,6 +117,12 @@
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
 			</li>
 			</a>
+			<a href="javascript:void(0);" onclick="phone_submit()">
+			<li>
+				<div class="list_info">电话提报</div>
+				<div class="next"><span class="fa fa-chevron-right" ></span></div>
+			</li>
+			</a>
 			<{if $userExtRow.group_id==2}>
 			<div class="register_end" onclick="chuqin()" style="height:35px;line-height:35px;font-size:16px;width:40%;background-color:#ff7101;">出勤提报</div>
 			<{/if}>
@@ -170,6 +176,18 @@ function chuqin(){
 				alert(res);
 			}
 		})
+	}
+}
+//电话提报
+function phone_submit(){
+	if('<{$tid}>'){
+		if('<{$is_phone}>'=='1'){
+			window.location.href="index.php?m=phone&a=add&tid=<{$tid}>";
+		}else{
+			alert('您今天参加的兼职不能提报电话');
+		}
+	}else{
+		alert('您今天未参加兼职或未出勤');
 	}
 }
 </script>
