Signed-off-by: hanbing <295079454@qq.com>

--- a/home/app/hptshop/templates/goods_add.html
+++ b/home/app/hptshop/templates/goods_add.html
@@ -124,6 +124,15 @@
 							</div>
 							<div class="shop_sort">
 								<div class="shop_sort_title">
+									<h4>包含在大礼包：</h4>
+								</div>
+								<div class="shop_sort_set" style="margin:10px;color:#4E5359;">
+									<input type="radio" name="info[is_lb]" id="optionsRadios1" value="0" <{if !$vo.is_lb}>checked<{/if}> > <label for="optionsRadios1">否&nbsp;&nbsp;</label>
+									<input type="radio" name="info[is_lb]" id="optionsRadios2" value="1" <{if $vo.is_lb==1}>checked<{/if}> ><label for="optionsRadios2">是</label>
+								</div>
+							</div>
+							<div class="shop_sort">
+								<div class="shop_sort_title">
 									<h4></h4>
 								</div>
 								<div class="shop_sort_set">
