--- a/home/app/hptshop/templates/order_add.html
+++ b/home/app/hptshop/templates/order_add.html
@@ -82,6 +82,9 @@
 								<div class="shop_sort_set">				  
 									<table>
 										<tbody style="text-align:center;">
+											<{if $vo.is_lb==1}>
+											<tr style="color:red;line-height:30px;font-size:16px;"><th>大礼包</th></tr>
+											<{/if}>
 											<tr style="background-color:#F3F3F3;">
 												<td style="width:100px;">商品</td>
 												<td style="width:80px;">订购量</td>
