--- a/mobile/templates/user_index_company.html
+++ b/mobile/templates/user_index_company.html
@@ -56,6 +56,18 @@
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
 			</li>
 			</a>
+			<a href="index.php?m=personal&a=orderhistory">
+			<li>
+				<div class="list_info">云淘坊消费记录</div>
+				<div class="next"><span class="fa fa-chevron-right" ></span></div>
+			</li>
+			</a>
+			<a href="index.php?m=card&a=index">
+			<li>
+				<div class="list_info">我的卡片</div>
+				<div class="next"><span class="fa fa-chevron-right" ></span></div>
+			</li>
+			</a>
 			<div class="register_end" onclick="logout()" style="height:35px;line-height:35px;font-size:16px;width:90%;background-color:#ff7101;">退出登录</div>
 		</ol>
 	</div>
