--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -58,7 +58,7 @@ margin: 0 2%;
 	<div style="background-color:#fff;">
 		<div class="xjk_tp_btm_p1_sp1">余额：</div>
 		<div class="xjk_tp_btm_p1_sp2">
-			<span style='inline-block;border:2px solid #01B4EC;border-radius:5px;padding-left:10px;padding-right:10px;'><{$userRow.money|default:0}>.00</span>
+			<span style='inline-block;border:2px solid #01B4EC;border-radius:5px;padding-left:10px;padding-right:10px;'><{$userRow.money|default:0}></span>
 			<!-- <b>我的账单</b> -->
 		</div>
 	</div>
