--- a/mobile/templates/login.html
+++ b/mobile/templates/login.html
@@ -45,7 +45,11 @@ function save(){
 			}else if(res=='passerr'){
 				alert("密码错误");
 			}else if(res=='success'){
-				window.location.href="index.php?m=user&a=user_index";
+				if(document.referrer){
+					window.history.go(-1);
+				}else{
+					window.location.href="index.php?m=user&a=user_index";
+				}
 			}
 		}else{
 			alert("注册失败");
