--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -123,6 +123,18 @@
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
 			</li>
 			</a>
+			<a href="index.php?m=personal&a=orderhistory">
+			<li>
+				<div class="list_info">云淘坊消费记录</div>
+				<div class="next"><span class="fa fa-chevron-right" ></span></div>
+			</li>
+			</a>
+			<a href="index.php?m=card&a=index">
+			<li>
+				<div class="list_info">我的卡片</div>
+				<div class="next"><span class="fa fa-chevron-right" ></span></div>
+			</li>
+			</a>
 			<{if $userExtRow.group_id==2}>
 			<div class="register_end" onclick="chuqin()" style="height:35px;line-height:35px;font-size:16px;width:40%;background-color:#ff7101;">出勤提报</div>
 			<{/if}>
