--- a/mobile/templates/delivery_lb.html
+++ b/mobile/templates/delivery_lb.html
@@ -7,6 +7,7 @@
     <meta http-equiv="cleartype" content="on">
     <link rel="stylesheet" href="css/common1.css" />
 	<link rel="stylesheet" type="text/css" href="font/css/font-awesome.min.css">
+	<script src="js/jquery.min.js"></script>
 </head>
 <body>
 <div class="clearfix"></div>
@@ -53,6 +54,7 @@
     </div>
 </section>
 <div class="clearfix"></div>
+<{include file="footer.html"}>
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript">
 function save(obj){
@@ -76,6 +78,7 @@ function save(obj){
 			return;
 		}
 		$(obj).attr("subFromFlag",'1');
+		$('#loading').show();
 		$.ajax({
 			url:"index.php?m=order&a=add_lb",
 			data:$('#memberform').serializeArray(),
@@ -83,6 +86,7 @@ function save(obj){
 			dataType:'json',
 			async :false,
 			success:function(res){
+				$('#loading').hide();
 				$(obj).attr("subFromFlag",'0');
 				if(res=='code_err'){
 					alert('您的优惠码不存在或已使用');
