--- a/mobile/templates/trolley.html
+++ b/mobile/templates/trolley.html
@@ -13,7 +13,8 @@
 <section class="Main trolley">
     <div class='trolleyMain'>
         <h3 class='trolleyTitle'>购 物 车</h3>
-		<div style="text-align:center;color:#ff4400;margin-bottom:-0.5em;font-size:0.9em;">邮费￥<{$yunfei}>，满<{$moneyToFree}>即可包邮</div>
+		<div style="text-align:center;color:#ff4400;margin-bottom:5px;font-size:0.9em;">邮费￥<{$yunfei}>，满<{$moneyToFree}>即可包邮</div>
+		<div style="text-align:center;color:#ff4400;margin-bottom:-0.5em;font-size:0.9em;">(国内不限区域、不限重量)</div>
         <form action="javascript:void(0);">
 		<{foreach from=$list item="v"}>
 		<div class='trolleyBlock'>
@@ -37,7 +38,8 @@
 		<{/foreach}>
         <div class='trolleyCount'>
             <p style="width:90%;float:none;margin-bottom:5px;">您购买了<{$totalNum}>件产品</p>
-            <p class='money' style="width:90%;float:none;font-weight:bold;font-size:14px;">总价：￥<{$totalMoney}> + <{$fact_yunfei}>（邮费）= <{$finalMoney}></p>
+            <p class='money' style="width:90%;float:none;font-weight:bold;font-size:14px;">￥<{$totalMoney}>（商品） + <{$fact_yunfei}>（邮费）</p>
+            <p class='money' style="width:90%;float:none;font-weight:bold;font-size:14px;">总计：￥<{$finalMoney}></p>
             <div class="clearfix"></div>
             <button type="button" class='addBtn detailFormBtn' onclick="goToPay()">去结账</button>
             <button type="button" class='submitBtn detailFormBtn' onclick="javascript:window.location.href='index.php?m=goods&a=index'">继续挑选</button>
