--- a/mobile/templates/login.html
+++ b/mobile/templates/login.html
@@ -46,7 +46,7 @@ function save(){
 				alert("密码错误");
 			}else if(res=='success'){
 				if(document.referrer){
-					window.history.go(-1);
+					window.location.href=document.referrer;
 				}else{
 					window.location.href="index.php?m=user&a=user_index";
 				}
