Signed-off-by: hanbing <295079454@qq.com>

--- a/home/app/hptshop/templates/slide_add.html
+++ b/home/app/hptshop/templates/slide_add.html
@@ -49,7 +49,7 @@
 									<h4>链接地址：</h4>
 								</div>
 								<div class="shop_sort_set">
-									<input maxlength="30" class="shop_sort_text" name="info[piclink]" value="<{$vo.piclink}>" type="text">
+									<input class="shop_sort_text" name="info[piclink]" value="<{$vo.piclink}>" type="text">
 									<span class="input_span_extra" style="color:red">&nbsp;&nbsp;&nbsp;注:请以http://开头</span>
 								</div>
 							</div>
