--- a/mobile/templates/footer.html
+++ b/mobile/templates/footer.html
@@ -5,6 +5,9 @@
 .bottom_menu div{width:32%;float:left;text-align:center;color:#fff;font-size: 12px;height: 25px;line-height: 25px;}
 </style>
 <div style="height:45px;"></div>
+<a href="index.php?m=goods&a=index" style="display:block;width:40px;height:40px;position:fixed;z-index:2888;bottom:60px;left:15px;">
+	<i class="fa fa-shopping-cart" style="font-size:40px;opacity:0.9;color:#01B4EC;"></i>
+</a>
 <div class="bottom_bar">
     <div class="bottom_menu" style="height:18px;">
 		<div onclick="window.location.href='index.php?m=pic&a=index'" <{if $smarty.get.m=='pic'}>class="select"<{/if}> style="height:18px;">
