--- a/mobile/templates/task_index.html
+++ b/mobile/templates/task_index.html
@@ -62,7 +62,7 @@
 	</ul>
 	</form>
 	<div class="blank_015"></div>
-	<div style="margin-top:-10px;margin-bottom:10px;"><img src="./images/job_index.jpg" style="width:100%;" onclick="window.location.href='index.php?m=job&a=index'" /></div>
+	<div style="margin-top:-10px;margin-bottom:10px;"><img src="./images/shop_index.jpg" style="width:100%;" onclick="window.location.href='index.php?m=goods&a=index'" /></div>
 	<div class="history" style="border-bottom:none;">
 		<div class="no_sign">
 		<{foreach from=$list item=v}>
