--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -131,7 +131,7 @@
 			</a>
 			<a href="index.php?m=card&a=index">
 			<li>
-				<div class="list_info">我的卡片</div>
+				<div class="list_info">我的卡券</div>
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
 			</li>
 			</a>
