--- a/mobile/templates/card_index.html
+++ b/mobile/templates/card_index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>我的卡片</title>
+<title>我的卡券</title>
 <meta content="application/xhtml+xml;charset=UTF-8" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="font/css/font-awesome.min.css">
@@ -17,12 +17,29 @@
 .num_div{float:left;height:30px;margin-top:120px;margin-left:15px;}
 .use_btn{display:block;background-color:#ff7101;color:#fff;font-size:16px;
 	border-radius:5px;padding:3px 22px;margin-top:5px;}
+.kld_code{ background-color:#01B4EC;border-radius:0.5em;color:#fff;width:80px;letter-spacing:2px;
+	text-align:center;line-height:30px;float:left;}
+.kld_use{float:left;line-height:30px;margin-left:10px;color:#bbb;}
+.kld_no_use{float:left;line-height:30px;margin-left:10px;color:red;}
 </style>
 </head>
 <style type="text/css">
 </style>
 <body style="background-color:#eeeeee;">
 <div class="main">
+	<div class="ban_div">开乐迪优惠码：</div>
+	<{foreach from=$kld_list item=kv}>
+	<div class="card_box">
+		<div class="kld_code"><{$kv.code}></div>
+		<{if $kv.is_use==1}>
+		<div class="kld_use">已使用</div>
+		<{else}>
+		<div class="kld_no_use">未使用</div>
+		<{/if}>
+		<div style="clear:both;"></div>
+	</div>
+	<{/foreach}>
+	<div style="height:10px;border-bottom:1px solid #ccc;"></div>
 	<div class="ban_div"><{if $in_ban==1}>您在禁闭期内，可使用解禁卡解禁<{else}>您不在禁闭期内<{/if}></div>
 	<div class="card_box">
 		<div class='img_box'><img src="./images/card1.png" /></div>
